Feat - added login; Feat - added logout; Feat - added User Questionnaire answer Page;

--- a/TestASP.Web/Views/Shared/Error.cshtml
+++ b/TestASP.Web/Views/Shared/Error.cshtml
@@ -10,6 +10,8 @@
 {
     <p>
         <strong>Request ID:</strong> <code>@Model.RequestId</code>
+        <h3>MESSAGE:</h3>
+        <p class="text-danger">@Model.Message</p>
     </p>
 }
 
