--- a/TestASP.Web/Views/_ViewImports.cshtml
+++ b/TestASP.Web/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using TestASP.Web.Models
 @using TestASP.Web.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, TestASP.Web.TagHelpers
