--- a/TestASP.BlazorServer/Pages/QuestionnairePage/Admin/AdminViewQuestionnaire.razor
+++ b/TestASP.BlazorServer/Pages/QuestionnairePage/Admin/AdminViewQuestionnaire.razor
@@ -27,7 +27,7 @@
         <h1>You  have to login to answer this questionnaire</h1>
     </NotAuthorized>
     <Authorized>
-        <PageTitle>@(Id == null ? "Add Questionnaire" : "View or Update Questionnaire" )</PageTitle>
+        <PageTitle>Maintenance - @(Id == null ? "Add Questionnaire" : "View or Update Questionnaire" )</PageTitle>
         @if (IsLoading)
         {
             <h1>Loading...</h1>
