--- a/TestASP.BlazorServer/Pages/QuestionnairePage/QuestionnaireList.razor
+++ b/TestASP.BlazorServer/Pages/QuestionnairePage/QuestionnaireList.razor
@@ -9,7 +9,7 @@
 
 @inject IQuestionnaireService _questionnaireService
 @inject ToastService _toastService
-
+<PageTitle>My Questionnaire</PageTitle>
 @if (Questionnaires != null)
 {
     <Card>
