--- a/TestASP.Web/Areas/Admin/Views/Questionnaire/Add.cshtml
+++ b/TestASP.Web/Areas/Admin/Views/Questionnaire/Add.cshtml
@@ -1,39 +1,30 @@
 ﻿@using TestASP.Web.Areas.Admin.Models.Questionnaire
-@using TestASP.Web.TagHelpers;
 
 @namespace TestASP.Web.Areas.Admin.Views.Questionnaire
 
 @model AdminQuestionnaireViewModel
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    if(Model?.Id > 0)
-    {
-        ViewBag.Title = "Admin - Update Questionnaire";
-    }
-    else 
-    {
-        ViewBag.Title = "Admin - Add Questionnaire";    
-    }
+    ViewBag.Title = $"Admin - {(Model?.Id > 0 ? "Update" : "Add")} Questionnaire";
 }
 @if(Model != null)
-{
+{    
     <form method="post">
         <div class="card">
             <div class="card-header">
                 <h2>Add Questionnaire</h2>
             </div>
-            <div class="card-body">            
+            <div class="card-body">
                 <BootstrapInput asp-for="Name"/>
-                <BootstrapInput asp-for="Description"/>
-                <input type="checkbox" onchange="toggle(this,'Content')"/>
-                <BootstrapInput hidden asp-for="Content"/>
+                <BootstrapInput asp-for="Description" type="textarea"/>
+                <label>
+                    Has Content?
+                    <input type="checkbox" data-bs-toggle="toggle" data-bs-target="#Content"/>
+                </label>
+                <BootstrapInput hidden asp-for="Content" type="textarea"/>
             </div>
             <div class="card-footer">
-                <BootstrapButton size="Small">Save</BootstrapButton>
-                <BootstrapButton >Save</BootstrapButton>
-                <bootstrap-button>Save</bootstrap-button>
-                <BoostrapInput asp-for="asd" />
-                <button type="button" class="btn btn-primary">Save</button>
+                <BootstrapButton color="Success" button-type="Outline">Save</BootstrapButton>
             </div>
         </div>
     </form>
